--- a/JoshSuite/src/main/resources/application.properties
+++ b/JoshSuite/src/main/resources/application.properties
@@ -1,21 +1,37 @@
-# MySQL Configuration
-spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.mysql.url=jdbc:mysql://localhost:3306/user_details
-spring.datasource.mysql.username=root
-spring.datasource.mysql.password=sahil12
-spring.jpa.mysql.hibernate.ddl-auto=update
-spring.jpa.mysql.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-
-# SQLite Configuration
-sqlite_db.datasource.sqlite.driver-class-name=org.sqlite.JDBC
-sqlite_db.datasource.sqlite.url=jdbc:sqlite:session.db
-sqlite_db.jpa.sqlite.hibernate.ddl-auto=update
-sqlite_db.jpa.sqlite.database-platform=org.hibernate.community.dialect.SQLiteDialect
-
-# JPA Configuration
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Server Configuration
-server.port=8081
+## Server Configuration
+#server.port=8081
+#
+#
+## MySQL Configuration
+#spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.mysql.url=jdbc:mysql://localhost:3306/user_details
+#spring.datasource.mysql.username=root
+#spring.datasource.mysql.password=sahil12
+#spring.jpa.mysql.hibernate.ddl-auto=update
+#spring.jpa.mysql.database-platform=org.hibernate.dialect.MySQL8Dialect
+#
+#
+## SQLite Configuration
+#sqlite_db.datasource.sqlite.driver-class-name=org.sqlite.JDBC
+#sqlite_db.datasource.sqlite.url=jdbc:sqlite:session.db
+#sqlite_db.jpa.sqlite.hibernate.ddl-auto=update
+#sqlite_db.jpa.sqlite.database-platform=org.hibernate.community.dialect.SQLiteDialect
+#
+## JPA Configuration
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+## File Containers Configuration
+#file-storage.container1.host=comp20081-files-container1
+#file-storage.container2.host=comp20081-files-container2
+#file-storage.container3.host=comp20081-files-container3
+#file-storage.container4.host=comp20081-files-container4
+#
+#file-storage.container1.port=22
+#file-storage.container2.port=22
+#file-storage.container3.port=22
+#file-storage.container4.port=22
+#
+#file-storage.ssh.username=ntu-user
+#file-storage.ssh.private-key-path=${user.home}/.ssh/id_ed25519
+#file-storage.ssh.public-key-path=${user.home}/.ssh/id_ed25519.pub
