--- a/JoshSuite/pom.xml
+++ b/JoshSuite/pom.xml
@@ -109,13 +109,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.3.9</version>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					<image>
+						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
+						<name>spring_josh_app</name>
+					</image>
 				</configuration>
 			</plugin>
 		</plugins>
